--- a/Section 5 Introduction to CSS/5.1. Adding CSS/internal.html
+++ b/Section 5 Introduction to CSS/5.1. Adding CSS/internal.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head >
+  <style>
+    h1{
+      color: red;
+    }
+  </style>
   <meta charset="UTF-8">
   <title>Internal</title>
 </head>
