--- a/Section 6 CSS Properties/6.4 Motivation Meme Project/index.html
+++ b/Section 6 CSS Properties/6.4 Motivation Meme Project/index.html
@@ -1,3 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Meme</title>
+  <link rel="stylesheet" href="./style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Hind+Vadodara:wght@500&family=Libre+Baskerville&family=Montserrat:wght@100;400;900&family=Rethink+Sans:wght@600&family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <div class="container">
+    <img class="image" src="./picture.jpg" alt="Remember why you started picture."/>
+    <h1>Remember why you started!</h1>
+    <p>That moment which jerk you to move forward!</p>
+  </div>
+
+</body>
+</html>
+
+
 <!-- 
   TODO: Create a motivational post website.
 Style it how ever you like. 
