--- a/Colt_steele/Section 7 CSS Selectors/05_CSS_Selectors/starter.html
+++ b/Colt_steele/Section 7 CSS Selectors/05_CSS_Selectors/starter.html
@@ -5,31 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Selectors</title>
+    <link rel="stylesheet" href="more_styles.css"
 </head>
 
 <body>
     <nav>
-        <input type="text" placeholder="search">
+        <label for="search"></label>
+        <input type="text" placeholder="search" id="search">
         <button>Log In</button>
-        <button>Sign Up</button>
+        <button id="sign-up">Sign Up</button>
     </nav>
     <main>
         <h1>Popular Posts</h1>
         <section>
             <span>Posted by <a href="#213adas">/u/not_funny</a></span>
-            <h2>Lol look at this hilarious meme <span>funny</span></h2>
+            <h2>Lol look at this hilarious meme <span class="tags">funny</span></h2>
             <button>+Vote</button>
             <hr>
         </section>
         <section>
             <span>Posted by <a href="#345adas">/u/gooner4lyfe</a></span>
-            <h2>Happy birthday to the strongest defender/bodyguard in the Prem! <span>gunners</span></h2>
+            <h2>Happy birthday to the strongest defender/bodyguard in the Prem! <span class="tags">gunners</span></h2>
             <button>+Vote</button>
             <hr>
         </section>
         <section>
             <span>Posted by <a href="#981adas">/u/dogfan</a></span>
-            <h2>This Corgi got some good stuff from the vet. <span>dogs</span></h2>
+            <h2>This Corgi got some good stuff from the vet. <span class="tags">dogs</span></h2>
             <button>+Vote</button>
             <hr>
         </section>
@@ -51,6 +53,7 @@
                 </li>
             </ul>
         </nav>
+        <a href="#license">Content is available under this licenses.</a>
     </footer>
 
 </body>
