--- a/Colt_steele/Section 8 CSS Box Model/Box_Model_And_Units/Box_Model/test/sk_index.html
+++ b/Colt_steele/Section 8 CSS Box Model/Box_Model_And_Units/Box_Model/test/sk_index.html
@@ -8,26 +8,26 @@
 </head>
 <body>
     <h1>Hello! </h1>
-    <div>Some textyou can see there's a box around pretty much everything
+    <div id="one">Some textyou can see there's a box around pretty much everything
         even things that don't necessarily look like a rectangle.
         See if I can find an example here.
         How about one of these icons down here, the Twitter icon
         if I hover, we can see there is a box around that
-        even though it's not actually a box </div>
+        even though  </div>
 
-    <div>Some textyou can see there's a box around pretty much everything
+    <div id="two">Some textyou can see there's a box around pretty much everything
         even things that don't necessarily look like a rectangle.
         See if I can find an example here.
         How about one of these icons down here, the Twitter icon
         if I hover, we can see there is a box around that
-        even though it's not actually a box </div>
+        even though  </div>
 
-    <div>Some textyou can see there's a box around pretty much everything
+    <div id="three">Some textyou can see there's a box around pretty much everything
         even things that don't necessarily look like a rectangle.
         See if I can find an example here.
         How about one of these icons down here, the Twitter icon
         if I hover, we can see there is a box around that
-        even though it's not actually a box </div>
+        even though </div>
     
 </body>
 </html>
