--- a/Colt_steele/Section 8 CSS Box Model/Box_Model_And_Units/Box_Model/test/sk_index.html
+++ b/Colt_steele/Section 8 CSS Box Model/Box_Model_And_Units/Box_Model/test/sk_index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="sk_style.css">
 </head>
 <body>
-    <h1>Hello! </h1>
+    <h1>Hello! <span>:)</span> </h1>
     <div id="one">Some textyou can see there's a box around pretty much everything
         even things that don't necessarily look like a rectangle.
         See if I can find an example here.
@@ -28,6 +28,6 @@
         How about one of these icons down here, the Twitter icon
         if I hover, we can see there is a box around that
         even though </div>
-    
+    <button>Pad Me</button>
 </body>
 </html>
