--- a/Colt_steele/Section 8 CSS Box Model/Box_Model_And_Units/Display/index.html
+++ b/Colt_steele/Section 8 CSS Box Model/Box_Model_And_Units/Display/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Display Property</title>
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="app1.css">
 </head>
 
 <body>
@@ -16,6 +16,9 @@
 
     <h1>I am H1</h1>
     <h1>I am also H1</h1>
+
+   <span>I am span </span>
+    <span>I am also span </span>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ipsum blanditiis veritatis distinctio. Nisi
         saepe consequuntur eius facilis rem magnam a vel impedit maxime quidem error alias, sed mollitia earum?
