--- a/Colt_steele/Section 9 Other CSS Properties/Other_Properties/Background/index.html
+++ b/Colt_steele/Section 9 Other CSS Properties/Other_Properties/Background/index.html
@@ -5,13 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Background</title>
-    <link rel="stylesheet" href="app.css">
+    <!-- <link rel="stylesheet" href="app.css"> -->
+    <link rel="stylesheet" href="bk.css">
 </head>
 
 <body>
 
     <section>
-        <h1>i am heading</h1>
+        <div id="rgba">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu dictum varius duis at. Massa enim nec dui nunc mattis enim ut. Sed adipiscing diam donec adipiscing tristique. Sed faucibus turpis in eu mi. Dolor morbi non arcu risus quis. </div>
+        <div id="opacity">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu dictum varius duis at. Massa enim nec dui nunc mattis enim ut. Sed adipiscing diam donec adipiscing tristique. Sed faucibus turpis in eu mi. Dolor morbi non arcu risus quis. </div>
+
+    
     </section>
 
 </body>
