--- a/Colt_steele/Section 9 Other CSS Properties/Other_Properties/Transition/index.html
+++ b/Colt_steele/Section 9 Other CSS Properties/Other_Properties/Transition/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transitions</title>
-    <link rel="stylesheet" href="app.css">
+    <!-- <link rel="stylesheet" href="app.css"> -->
+    <link rel="stylesheet" href="sk_app.css">
 </head>
 
 <body>
