Event Object js and html changed

--- a/Colt_steele/Section 25 DOM Events/TheEventObject/index.html
+++ b/Colt_steele/Section 25 DOM Events/TheEventObject/index.html
@@ -11,7 +11,8 @@
 <body>
     <button>CLICK</button>
     <input type="text">
-    <script src="app.js"></script>
+    <!-- <script src="app.js"></script> -->
+    <script src="index.js"></script>
 </body>
 
 </html>
