--- a/Colt_steele/Section 12 Bootstrap/Starter/index.html
+++ b/Colt_steele/Section 12 Bootstrap/Starter/index.html
@@ -11,7 +11,7 @@
     <div class="container">
     <h1> Placeholder</h1>
     <h1 class = "display-1 text-center text-primary" >Display 1</h1>
-    <h1 class=" display-4">Button<span class="badge badge-primary badge-pill">New</span></h1>
+    <h2 class="display-4">Buttons<span class="badge rounded-pill text-bg-primary">New!</span></h2>
     <button type="button" class="btn btn-primary">Primary</button>
     <button type="button" class="btn btn-success">Success</button>
     <button class="btn btn-outline-warning">Warning!</button>
@@ -19,6 +19,7 @@
     <button class="btn btn-primary btn-sm">Small button</button>
     <button class="btn btn-primary btn-lg">Large button</button>
     <button class= "btn btn-primary">Updates<span class="badge badge-light">9</span></button>
+    <button class= "btn btn-primary">Updates<span class="badge text-bg-light">9</span></button>
     <h1 class="display-6"> Typography</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vitae ipsum sit amet nisi faucibus fringilla. 
         Sed mi mi, convallis a lacus at, volutpat aliquam turpis. Aliquam et lorem tortor. 
