code changed on section 12

--- a/Colt_steele/Section 12 Bootstrap/Navbars/index.html
+++ b/Colt_steele/Section 12 Bootstrap/Navbars/index.html
@@ -15,7 +15,7 @@
         <a class="navbar-brand" href="#">Navbar</a>
     </nav> -->
 
-    <nav class="navbar navbar-expand-sm navbar-dark bg-primary fixed-top">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-success fixed-top">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#expandme">
             <span class="navbar-toggler-icon"></span>
@@ -23,8 +23,8 @@
         <div class="collapse navbar-collapse" id="expandme">
             <div class="navbar-nav">
                 <a href="Home" class="nav-item nav-link">Home</a>
-                <a href="Home" class="nav-item nav-link">About</a>
-                <a href="Home" class="nav-item nav-link">Contact</a>
+                <a href="About" class="nav-item nav-link">About</a>
+                <a href="contact.html" class="nav-item nav-link ">Contact</a>
             </div>
             <form class="form-inline ml-auto">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
