--- a/Colt_steele/Section 12 Bootstrap/Navbars/index.html
+++ b/Colt_steele/Section 12 Bootstrap/Navbars/index.html
@@ -17,8 +17,8 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark bg-success fixed-top">
         <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#expandme">
-            <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" data-toggle="collapse" type="submit" data-target="#expandme">
+            <span class="navbar-toggler-icon">Button</span>
         </button>
         <div class="collapse navbar-collapse" id="expandme">
             <div class="navbar-nav">
