--- a/Colt_steele/Section 19 JS Loops/Loops_Code_Vizon/index.html
+++ b/Colt_steele/Section 19 JS Loops/Loops_Code_Vizon/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>While Loops</title>
+    <title>Loops</title>
 </head>
-
 <body>
-<h1>This is my first heading!</h1>
-<h2>This is h2</h2>
-<script src="test.js"></script>
+    <h1>While loops examples!</h1>
+   
+    <script src="guessing_game.js"></script>
 </body>
-
 </html>
